<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/text_accounts_dialog_platform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textColor="?colorPrimary"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/icon_accounts_dialog_edit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Amazon" />

    <ImageView
        android:id="@+id/icon_accounts_dialog_edit"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="8dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@id/text_accounts_dialog_platform"
        app:layout_constraintEnd_toStartOf="@id/icon_accounts_dialog_delete"
        app:layout_constraintTop_toTopOf="@id/text_accounts_dialog_platform"
        app:srcCompat="@drawable/ic_edit"
        app:tint="?colorPrimary" />

    <ImageView
        android:id="@+id/icon_accounts_dialog_delete"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@id/text_accounts_dialog_platform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_accounts_dialog_platform"
        app:srcCompat="@drawable/ic_delete"
        app:tint="@color/dark_red" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_accounts_dialog_username"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/text_view_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_accounts_dialog_platform">

        <ImageView
            android:id="@+id/icon_accounts_dialog_username"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_user"
            app:tint="?colorPrimary" />

        <TextView
            android:id="@+id/text_accounts_dialog_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/icon_accounts_dialog_username"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="testing.username" />

        <ImageView
            android:id="@+id/icon_accounts_dialog_copy_username"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_copy"
            app:tint="?colorPrimary" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_accounts_dialog_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/text_view_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_accounts_dialog_username">

        <ImageView
            android:id="@+id/icon_accounts_dialog_password"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_password"
            app:tint="?colorPrimary" />

        <EditText
            android:id="@+id/input_accounts_dialog_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:enabled="false"
            android:hint="@string/hint_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/icon_accounts_dialog_see_password"
            app:layout_constraintStart_toEndOf="@id/icon_accounts_dialog_password"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck"
            tools:text="good.password132141" />

        <ImageView
            android:id="@+id/icon_accounts_dialog_see_password"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/icon_accounts_dialog_copy_password"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_see_passcode"
            app:tint="@color/gray" />

        <ImageView
            android:id="@+id/icon_accounts_dialog_copy_password"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_copy"
            app:tint="?colorPrimary" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>