<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottmom_navigation_menu">
    <item
        android:id="@id/view_accounts_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_account_library"
        android:title="@string/menu_item_view" />

    <item
        android:id="@id/save_account_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_account_add"
        android:title="@string/menu_item_save" />

    <item
        android:id="@id/generate_password_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_generate_password"
        android:title="@string/menu_item_generate_pass" />
</menu>