...

    <ImageView
        android:id="@+id/icon_maximize_account"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/content_maximize_account"
        app:layout_constraintBottom_toBottomOf="@id/icon_platform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/icon_platform"
        app:srcCompat="@drawable/ic_fullscreen"
        app:tint="?colorPrimary" />

...
